# nonlinear_obstacle_avoidance

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
comparison/: .gitignore  README.md  d_mixvf_plot.m  d_mixvf_sim.slx  evaluate_field_with_six_obstacles.m  evaluate_trajectories.m  h_3D_plot.m  h_3D_sim.slx
nonlinar_avoidance/: gmm_obstacle.py  multi_ellipse_obstacle.py  multi_obstacle_avoider.py  multiboundary_container.py  multihull_convergence.py  nonlinear_rotation_avoider.py  utils.py
nonlinear_avoidance/: _base_multiobstacle.py  arch_obstacle.py  base_logger.py  geometry.py  hierarchy_obstacle_protocol.py  multi_body_human.py  multi_ellipse_obstacle.py  multi_hull_and_obstacle.py  multi_obstacle.py  multi_obstacle_avoider.py  multi_obstacle_container.py  nonlinear_rotation_avoider.py  rotation_container.py  vector_rotation.py
roam/: _base_multiobstacle.py  gmm_obstacle.py  human_obstacle.py  kmeans_motion_learner.py  kmeans_obstacle.py  multi_body_human.py  multi_ellipse_obstacle.py  multi_hull_and_obstacle.py  multi_obstacle_avoider.py  multiboundary_container.py  multihull_convergence.py  nonlinear_rotation_avoider.py  rigid_body.py  rotational_avoider.py  state_filters.py  utils.py  vector_rotation.py
scripts/: human_obstacle.py  plot_alternative_gamma.py  plot_lyapunov.py
tests/: test_and_visualization_nonlinear_displacement.py  test_arch_obstacle.py  test_archo_obstacle.py  test_boundary_obstacle.py  test_boundary_overrotation.py  test_circular_dynamics.py  test_circular_line_following.py  (+26 more)
(+106 files in other folders)
